# srgan

./: .gitignore  Makefile  constants.py  datasets.py  default.yaml  logger.py  models.py  pyproject.toml  test.py  train.py  utils.py
config/: debug.yaml  default.yaml
scripts/: log.sh  run.sh  test.sh
